Fix left-most tick labels were out of view for many dimensions

--- a/res/jslibs/d3.parcoords.css
+++ b/res/jslibs/d3.parcoords.css
@@ -34,5 +34,5 @@
 .parcoords {
     position: fixed;
     height:100%;
-    width:100%;
+    width:95%;
 }
